<resources>
    <string name="app_name">movieBox</string>
    <string name="watch_your_video_n_in_viirtual_reallity">watch your video\n in viirtual reallity</string>
    <string name="waatch_videos_in_n_virtual_reality">Waatch Videos in\n Virtual Reality</string>
    <string name="download_and_watch_offline_n_wherever_you_are">Download and watch offline\n wherever you are</string>
    <string name="get_in">Get in</string>
    <string name="log_in">Log in</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot Your Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register now</string>
    <string name="what_would_you_like_to_watch">What would you like to watch?</string>
    <string name="search_moview">Search moview</string>
    <string name="search_movie">search_movie</string>
    <string name="new_movie">New Movie</string>
    <string name="btn1">btn1</string>
    <string name="heart">heart</string>
    <string name="basket">basket</string>
    <string name="basket_invisible">basket invisible</string>
    <string name="profile">profile</string>
    <string name="upcomming_movies">Upcomming Movies</string>
    <string name="button">button</string>
    <string name="new_movies">new_movies</string>
    <string name="_0">0</string>
    <string name="summary">summary</string>
    <string name="title">title</string>
    <string name="score">score</string>
    <string name="popular_movies">Popular movies</string>
    <string name="popular_series">Popular series</string>
    <string name="register">Register</string>
    <string name="User_Name">User Name</string>
    <string name="email">Email</string>
    <string name="mobile_no">mobile No</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot password</string>
    <string name="enter_your_email_mobile_no">Enter your email/mobile NO</string>
    <string name="Submit">Submit</string>
    <string name="next">Next</string>
    <string name="do_you_forgot_your_password">do you forgot your password?</string>
    <string name="change_password">Change password</string>
    <string name="enter_the_recovery_code">Enter the recovery code</string>
    <string name="new_password">New password</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
</resources>