<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:background="@color/main_backgroound">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/gradient_color_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_logIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="128dp"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_user_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="128dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/user_name"
                android:textAlignment="center"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:background="@drawable/btn_background"
                />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_background"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="16sp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                style="@android:style/Widget.Button"
                android:background="@drawable/btn_background"
                android:layout_marginTop="64dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="Log in"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_DoNotHaveAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_marginTop="32dp"/>
            <TextView
                android:id="@+id/txt_RegisterNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_now"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="16sp"/>





        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>