<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/gradient_color_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:layout_marginTop="100dp"
                android:layout_marginStart="10dp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:hint="@string/enter_the_recovery_code"
                android:textColorHint="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white"
                android:layout_marginHorizontal="31dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_background"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_component"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="31dp"
                android:hint="@string/new_password"
                android:textColorHint="@color/white"
                app:boxBackgroundMode="none"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:counterTextColor="@color/white"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                app:startIconDrawable="@drawable/ic_lock_24"
                app:startIconTint="@color/white"
                app:helperText="Required*"
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/white"
                android:layout_marginTop="20dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_background"
                    android:inputType="textPassword"
                    android:maxLength="21"
                    android:paddingStart="40dp"
                    tools:ignore="RtlSymmetry"
                    android:lines="1"
                    android:textColor="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/repeatPassword_component"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="31dp"
                android:hint="@string/repeat_password"
                android:textColorHint="@color/white"
                app:boxBackgroundMode="none"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                app:startIconDrawable="@drawable/ic_lock_24"
                app:startIconTint="@color/white"
                app:counterTextColor="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_error_outline_24"
                app:errorIconTint="@color/red"
                app:helperText="Required*"
                app:helperTextTextColor="@color/red"
                android:layout_marginTop="5dp"
                app:hintTextColor="@color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/repeatPassword_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@drawable/btn_background"
                    android:maxLength="21"
                    android:lines="1"
                    android:paddingStart="40dp"
                    tools:ignore="RtlSymmetry"
                    android:textColor="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="120dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_background"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>